ScrollBar Issue

--- a/NewFiWebApp/NewfiWeb/src/main/webapp/resources/css/styles.css
+++ b/NewFiWebApp/NewfiWeb/src/main/webapp/resources/css/styles.css
@@ -3763,7 +3763,7 @@ input.calc-input {
 	top: 44px;
 	background: #fff;
 	width: 325px;
-	min-height: 300px;
+	height: 300px;
 	color: #777;
 	padding: 5px 0;
 	border-radius: 3px;
